--- a/app-payroll-general-microservice-dev.properties
+++ b/app-payroll-general-microservice-dev.properties
@@ -1,7 +1,7 @@
 app-provider.property= App Payroll General Profile Developer
 
-eureka.client.serviceUrl.defaultZone=http://172.17.0.2:8761/eureka/
-spring.datasource.url=jdbc:mysql://host.docker.internal:3306/app-ppal
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
+spring.datasource.url=jdbc:mysql://localhost:3306/app-ppal
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
