--- a/app-provider-general-microservice-dev.properties
+++ b/app-provider-general-microservice-dev.properties
@@ -1,7 +1,7 @@
 app-provider.property= App Provider  General Profile Developer
 
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
-spring.datasource.url=jdbc:mysql://localhost:3306/app-ppal
+spring.datasource.url=jdbc:mysql://localhost:3306/app-ppal-dev
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
