--- a/app-payroll-payment-microservice-dev.properties
+++ b/app-payroll-payment-microservice-dev.properties
@@ -1,4 +1,4 @@
-app-provider.property= App Payroll Payment Profile Developer
+app-provider.property= App Payroll Payment Profile Developers
 
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
 spring.datasource.url=jdbc:mysql://localhost:3306/app-ppal-dev
