--- a/client-microservice-dev.properties
+++ b/client-microservice-dev.properties
@@ -1,4 +1,9 @@
-console.property= Console Profile Developer
+#Configuración Eureka
+
+client.property= Console Profile Developer
+eureka.instance.hostname=localhost
+
+#Configuración Base de datos.
 
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
 spring.datasource.url=jdbc:mysql://localhost:3306/app-ppal
@@ -7,30 +12,28 @@ spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 
-eureka.instance.hostname=localhost
-auth.api.url = http://localhost:8080/api/auth/token
-user.api.url = http://localhost:8080/api/user
-authorization.api.url = http://localhost:8080/api/authorization
-audit.api.url = http://localhost:8080/api/audit
-document.api.url = http://localhost:8080/api/document
+#Variables de funcionamiento aplicación.
 
 id.folder.principal.app.provider = 1gnyYY2_1OmaEVq8-P_xxktm7weMII3Sp
 
+#Comuniación con Microservicios.
 
-app.principal = 1
-app.console = 2
-app.provider = 3
+audit.api.url = http://localhost:8080/api/audit
+authorization.api.url = http://localhost:8080/api/authorization
+auth.api.url = http://localhost:8080/api/auth/token
+document.api.url = http://localhost:8080/api/document
+user.api.url = http://localhost:8080/api/user
 
 
-p.admin.plataform = 1
-p.super.admin=2
-p.admin=3
-p.reader=4
-p.provider=5
+#Variables de Autenticación.
 
-t.admin.plataform = 1
-t.client = 2
-t.provider =3
-
-t.process = 1
-p.process = 2
+aut.console.platform = 21
+aut.console.super = 22
+aut.console.admin = 23
+aut.console.reader = 24
+aut.console.provider = 25
+aut.provider.super = 32
+aut.provider.admin = 33
+aut.provider.reader = 34
+aut.provider.provider = 35
+type.client = 2
