--- a/app-provider-general-microservice-dev.properties
+++ b/app-provider-general-microservice-dev.properties
@@ -6,7 +6,7 @@ domain=http://localhost:5173/
 
 #Configuración Base de datos.
 
-spring.datasource.url=jdbc:mysql://localhost:3306/app-ppal-dev
+spring.datasource.url=jdbc:mysql://localhost:3306/app-ppal
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
